--- a/login.html
+++ b/login.html
@@ -30,7 +30,7 @@
 			</div>
 		</header>
 		<div class="bg">
-			<form action="validate.php" method="Post">
+			<form action="validate.php" method="get">
 
 				<center>
 					<table class="center">
