--- a/Admin.html
+++ b/Admin.html
@@ -29,7 +29,7 @@
 			</div>
 		</header>
 		<div class="bg">
-			<form action="validate1.php" method="Post">
+			<form action="validate1.php" method="get">
 
 				<center>
 					<table class="center">
