--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 
 						<tr>
 							<td> <b> Name : </b>
-							<td> <input type=text name=t1 placeholder="Enter Your Name" size="30" required>
+							<td> <input type=text name=t1 placeholder="Enter Your Name" size="30" autocomplete="off" required>
 						</tr>
 
 						<tr>
@@ -142,11 +142,11 @@
 
 						<tr>
 							<td> <b>Email :</b>
-							<td> <input type=email name=t3 placeholder="Enter Your Email" size="30"  required>
+							<td> <input type=email name=t3 placeholder="Enter Your Email" size="30" autocomplete="off"  required>
 						</tr>
 						<tr>
 							<td> <b> University RollNo : </b>
-							<td> <input type=text name=t6 placeholder="Enter Your RollNo" size="30" required>
+							<td> <input type=text name=t6 placeholder="Enter Your RollNo" size="30" autocomplete="off" required>
 						</tr>
 						<tr>
 							<td><b>Select the Course</b> 
