--- a/login.html
+++ b/login.html
@@ -37,7 +37,7 @@
 
 						<tr>
 							<td> <b>Email</b>
-							<td> <input type=email name=t1 placeholder="Enter your Email here" required>
+							<td> <input type=email name=t1 placeholder="Enter your Email here" autocomplete="off" required>
 						</tr>
 
 						<tr>
