--- a/Admin.html
+++ b/Admin.html
@@ -36,7 +36,7 @@
 
 						<tr>
 							<td> <b>Email</b>
-							<td> <input type=email name=t1 placeholder="Enter your Email here" required>
+							<td> <input type=email name=t1 placeholder="Enter your Email here" autocomplete="off" required>
 						</tr>
 
 						<tr>
