--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 			<h2>
 				<center>Register</center>
 			</h2>
-			<form action="store.php" >
+			<form action="store.php" method="get" >
 				<center>
 					<table>
 
